--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "uinjek-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev-start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
